--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 <body>
 <div id="app"></div>
 <canvas id="gpuCanvas"></canvas>
+
+<div id="tutorial">
+  <p>Click to bounce it</p>
+  <br />
+</div>
+
+<!--<audio id="myAudio" autoplay>-->
+<!--  <source src="tunes.mp3" type="audio/mpeg">-->
+<!--</audio>-->
+
 <script type="module" src="/src/main.ts"></script>
 </body>
 
