--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + TS</title>
+  <title>Looney Tunes</title>
 </head>
 <body>
 <div id="app"></div>
@@ -33,6 +33,17 @@
         position: absolute;
         width: 100%;
         height: 100%;
+    }
+
+    #tutorial {
+        user-select: none;
+        position: absolute;
+        top: 0;
+        right: 0;
+        padding: 1rem;
+        color: white;
+        font-size: 20px;
+        font-family: monospace;
     }
 </style>
 </html>
